@@ -2,11 +2,11 @@ package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.dto.user.CreateUserRequest;
 import com.sprint.mission.discodeit.dto.user.UpdateUserRequest;
-import com.sprint.mission.discodeit.dto.user.UserInfoDto;
+import com.sprint.mission.discodeit.dto.user.UserDto;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
-import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import com.sprint.mission.discodeit.mapper.UserMapper;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.UserService;
@@ -15,10 +15,10 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.mindrot.jbcrypt.BCrypt;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 
 @Service
@@ -26,116 +26,108 @@ import org.springframework.stereotype.Service;
 public class BasicUserService implements UserService {
 
   private final UserRepository userRepository;
-  private final BinaryContentRepository binaryContentRepository;
   private final UserStatusRepository userStatusRepository;
-
-  private void saveUser() {
-    userRepository.save();
-  }
+  private final UserMapper userMapper;
 
   @Override
-  public User createUser(CreateUserRequest request) {
-    String hashedPassword = BCrypt.hashpw(request.getPassword(), BCrypt.gensalt());
+  public UserDto createUser(CreateUserRequest request) {
+    String hashedPassword = BCrypt.hashpw(request.password(), BCrypt.gensalt());
 
-    if (userRepository.existsByEmail(request.getEmail())) {
+    if (userRepository.existsByEmail(request.email())) {
       throw new IllegalArgumentException("이미 존재하는 Email입니다");
     }
-    if (userRepository.existsByUsername(request.getUsername())) {
+    if (userRepository.existsByUsername(request.username())) {
       throw new IllegalArgumentException("이미 존재하는 Username입니다");
     }
 
-    User user = new User(request.getUsername(), request.getEmail(), hashedPassword);
-    userRepository.addUser(user);
-    userStatusRepository.addUserStatus(new UserStatus(user.getId(), Instant.now()));
+    User user = User.builder()
+        .username(request.username())
+        .email(request.email())
+        .password(hashedPassword)
+        .build();
 
-    return user;
+    UserStatus userStatus = UserStatus.builder()
+        .user(user)
+        .lastActiveAt(Instant.now())
+        .build();
+
+    userRepository.save(user);
+    userStatusRepository.save(userStatus);
+    user.setStatus(userStatus);
+
+    return userMapper.toDto(user);
   }
 
   @Override
-  public User findUserById(UUID userId) {
-    return userRepository.findUserById(userId)
-        .orElseThrow(() -> new NoSuchElementException("User with id: " + userId + "not found"));
+  public UserDto findUserById(UUID userId) {
+    return userMapper.toDto(findUserOrThrow(userId));
   }
 
   @Override
   public String findUserNameById(UUID userId) {
-    return findUserById(userId).getUsername();
+    return findUserById(userId).username();
   }
 
   @Override
-  public List<UserInfoDto> findUsersByIds(Set<UUID> userIds) {
-    return userRepository.findUsersByIds(userIds).stream()
-        .map(this::mapToDto)
-        .collect(Collectors.toList());
+  public List<UserDto> findUsersByIds(Set<UUID> userIds) {
+    return userRepository.findByIdIn(userIds).stream()
+        .map(userMapper::toDto)
+        .toList();
   }
 
   @Override
-  public List<UserInfoDto> getAllUsers() {
-    return userRepository.findUserAll().stream()
-        .map(this::mapToDto)
-        .collect(Collectors.toList());
+  public List<UserDto> getAllUsers() {
+    return userRepository.findAllWithDetails().stream()
+        .map(userMapper::toDto)
+        .toList();
   }
 
   @Override
   public BinaryContent findProfileById(UUID userId) {
-    return binaryContentRepository.findBinaryContentById(findUserById(userId).getProfileId())
-        .orElse(null);
+    return findUserOrThrow(userId).getProfile();
   }
 
+  @Transactional
   @Override
-  public User updateProfile(UUID userId, UUID profileId) {
-    findUserById(userId).updateProfile(profileId);
-    userRepository.save();
-
-    return findUserById(userId);
+  public UserDto updateProfile(UUID userId, BinaryContent binaryContent) {
+    User user = findUserOrThrow(userId);
+    user.updateProfile(binaryContent);
+    return userMapper.toDto(user);
   }
 
+  @Transactional
   @Override
-  public User updateUser(UUID userId, UpdateUserRequest request) {
-    User user = findUserById(userId);
+  public UserDto updateUser(UUID userId, UpdateUserRequest request) {
+    User user = findUserOrThrow(userId);
 
-    if (request.getNewUsername() != null) {
-      user.updateUsername(request.getNewUsername());
+    if (request.newUsername() != null) {
+      user.updateUsername(request.newUsername());
     }
-    if (request.getNewPassword() != null) {
-      user.updatePassword(request.getNewPassword());
+    if (request.newPassword() != null) {
+      user.updatePassword(request.newPassword());
     }
-    if (request.getNewEmail() != null) {
-      user.updateEmail(request.getNewEmail());
+    if (request.newEmail() != null) {
+      user.updateEmail(request.newEmail());
     }
 
-    return user;
+    return userMapper.toDto(user);
   }
 
   @Override
   public void deleteUser(UUID userId) {
-    userRepository.deleteUserById(userId);
-    userStatusRepository.deleteUserStatusById(userId);
-    binaryContentRepository.deleteBinaryContentById(userId);
+    validateUserExists(userId);
+    userRepository.deleteById(userId);
   }
 
   @Override
   public void validateUserExists(UUID userId) {
     if (!userRepository.existsById(userId)) {
-      throw new RuntimeException("존재하지 않는 유저입니다.");
+      throw new NoSuchElementException("UserId: " + userId + " not found");
     }
   }
 
-  @Override
-  public UserInfoDto mapToDto(User user) {
-    Boolean isOnline = userStatusRepository.findUserStatusById(user.getId())
-        .map(UserStatus::isUserOnline)
-        .orElse(null);
-
-    UserInfoDto dto = new UserInfoDto();
-    dto.setId(user.getId());
-    dto.setCreateAt(user.getCreatedAt());
-    dto.setUpdateAt(user.getUpdatedAt());
-    dto.setUsername(user.getUsername());
-    dto.setEmail(user.getEmail());
-    dto.setOnline(isOnline);
-    dto.setProfileId(user.getProfileId());
-    return dto;
+  private User findUserOrThrow(UUID userId) {
+    return userRepository.findWithDetailsById(userId)
+        .orElseThrow(() -> new NoSuchElementException("UserId: " + userId + " not found"));
   }
-
 }
